--- a/client/package.json
+++ b/client/package.json
@@ -50,7 +50,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^3.0.18"
+    "tailwindcss": "^3.4.17"
   }
 }
